src/test/deca/context/invalid/inst_return_in_void_method_intMethod.deca
// Test la règle 3.24: Pas le droit de return quelque chose alors qu'on attend pas de return

class A  {

    int getInt(){
        return 5;
    }

    void voidMethod(){
        return getInt();
    }
}



// Resultat:

//# TODO message error
